updated edit and generalrecords, as well as added indicators for non nullable fields (*)

--- a/UnivMedicalRecord/Pages/GeneralRecord/GeneralRecords.cshtml
+++ b/UnivMedicalRecord/Pages/GeneralRecord/GeneralRecords.cshtml
@@ -34,18 +34,8 @@
            	text-align: center;
            	}
            
-           	input[id="radio1"]{
-           	display: inline-block;
-         		margin-left: -180px;
-           	}
-           
-              	input[id="radio2"]{
-           	display: inline-block;
-         		margin-left: -100px;
-           	}
-           
            	input[id="name"]{
-           	width: 225px;
+           	width: 330px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -63,7 +53,7 @@
            	}
            
                input[id="email"]{
-           	width: 229px;
+           	width: 340px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -72,7 +62,7 @@
            	}
            
                input[id="id"]{
-           	width: 150px;
+           	width: 350px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -81,7 +71,7 @@
            	}
            
                input[id="mobile"]{
-           	width: 150px;
+           	width: 200px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -90,7 +80,7 @@
            	}
            
                input[id="doctor"]{
-           	width: 220px;
+           	width: 325px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -99,7 +89,7 @@
            	}
            
                input[id="insurance"]{
-           	width: 175px;
+           	width: 300px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -108,7 +98,7 @@
            	}
            
                input[id="dob"]{
-           	width: 170px;
+           	width: 175px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -117,7 +107,7 @@
            	}
            
                input[id="birthplace"]{
-           	width: 165px;
+           	width: 275px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -126,7 +116,7 @@
            	}
            
                input[id="address"]{
-           	width: 190px;
+           	width: 325px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -134,26 +124,11 @@
            	margin-left: 5px;
            	}
            
-              	input[id="motherRadio1"]{
-           	display: inline-block;
-         		margin-left: -200px;
-           	}
-           
-              	input[id="motherRadio2"]{
-           	display: inline-block;
-         		margin-left: -500px;
-           	}
-           
-               input[id="motherRadio3"]{
-           	display: inline-block;
-         		margin-left: -400px;
-           	}
-           
-              	input[id="motherRadio4"]{
-           	display: inline-block;
-         		margin-left: -275px;
-           	}
-           
+           input[type="radio"]{
+           margin-left: 10px;
+           margin-right: 5px;
+           }
+
            	input[id="motherName"]{
            	width: 225px;
            	padding: 10px 10px 10px 10px;
@@ -164,7 +139,7 @@
            	}
            
               	input[id="motherAddress"]{
-           	width: 190px;
+           	width: 360px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -182,7 +157,7 @@
            	}
            
            	input[id="motherNumber"]{
-           	width: 150px;
+           	width: 210px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -190,26 +165,6 @@
            	margin-left: 5px;
            	}
            
-           
-               input[id="fatherRadio1"]{
-           	display: inline-block;
-         		margin-left: -200px;
-           	}
-           
-              	input[id="fatherRadio2"]{
-           	display: inline-block;
-         		margin-left: -500px;
-           	}
-           
-               input[id="fatherRadio3"]{
-           	display: inline-block;
-         		margin-left: -400px;
-           	}
-           
-              	input[id="fatherRadio4"]{
-           	display: inline-block;
-         		margin-left: -275px;
-           	}
            
            	input[id="fatherName"]{
            	width: 225px;
@@ -221,7 +176,7 @@
            	}
            
               	input[id="fatherAddress"]{
-           	width: 190px;
+           	width: 360px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -239,7 +194,7 @@
            	}
            
            	input[id="fatherNumber"]{
-           	width: 150px;
+           	width: 210px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -248,25 +203,6 @@
            	}
            
            
-               input[id="guardianRadio1"]{
-           	display: inline-block;
-         		margin-left: -200px;
-           	}
-           
-              	input[id="guardianRadio2"]{
-           	display: inline-block;
-         		margin-left: -500px;
-           	}
-           
-               input[id="guardianRadio3"]{
-           	display: inline-block;
-         		margin-left: -400px;
-           	}
-           
-              	input[id="guardianRadio4"]{
-           	display: inline-block;
-         		margin-left: -275px;
-           	}
            
            	input[id="guardianName"]{
            	width: 225px;
@@ -278,7 +214,7 @@
            	}
            
               	input[id="guardianAddress"]{
-           	width: 190px;
+           	width: 360px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -296,7 +232,7 @@
            	}
            
            	input[id="guardianRelation"]{
-           	width: 150px;
+           	width: 210px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -359,16 +295,16 @@
 			<table>
 				<tbody>
 				<tr>
-					<td> <label  for="name">Name</label>
+					<td> <label  for="name">Name*</label>
 						<input asp-for="FullName" type="text" id="name">
 					</td>
-					<td> <label  for="age">Age</label>
-						<input asp-for="Age" type=number id="age">
+					<td> <label  for="age">Age*</label>
+						<input asp-for="Age" type=number id="age" min="0">
 					</td>
 					<td> <div class="mt-3" style="float:left">
-							<label>Gender</label>
-							<td><input asp-for="Gender" type="radio" value="Male" id="radio1">Male</td>
-							<td><input asp-for="Gender" type="radio" value="Female" id="radio2">Female</td>
+							<label>Gender*</label>
+							<input asp-for="Gender" type="radio" value="Male" id="radio1">Male
+							<input asp-for="Gender" type="radio" value="Female" id="radio2">Female
 						</div>
 					</td>
 				</tr>
@@ -376,7 +312,7 @@
 					<td> <label for="email">Email</label>
 						<input asp-for="Email" type=text id="email">
 					</td>
-					<td> <label for="id">ID</label>
+					<td> <label for="id">ID*</label>
 						<input asp-for="IdNumber" type=text id="id">
 					</td>
 					<td> <label for="mobile">Mobile</label>
@@ -390,21 +326,18 @@
 					<td>  <label for="insurance" >Insurance</label>
 						<input asp-for="Insurance" type="text" id="insurance">
 					</td>
-					<td> <label for="dob">Date of Birth</label>
+					<td> <label for="dob">Date of Birth*</label>
 						<input asp-for="Date" type=date id="dob">
 					</td>
-    
 				</tr>
 				<tr>
-              
 					<td>  <label for="birthplace">Place of Birth</label>
 						<input asp-for="BirthPlace" type="text" id="birthplace">
 					</td>
-					<td>  <label for="address">Address</label>
+					<td>  <label for="address">Address*</label>
 						<input asp-for="Address" class="mb-5" type="text" id="address"> 
 					</td>
 				</tr>
-    
 				</tbody>
 			</table>
 			
@@ -435,10 +368,10 @@
     
 			<td> <div class="mt-3">
 					<label>Mother's Civil Status:</label>
-					<td><input asp-for="MotherStatus" value="Married" type="radio" id="motherRadio1">Married</td>
-					<td><input asp-for="MotherStatus" value="Single" type="radio" id="motherRadio2">Single</td>
-					<td><input asp-for="MotherStatus" value="Separated" type="radio" id="motherRadio3">Separated</td>
-					<td><input asp-for="MotherStatus" value="Widowed" type="radio" id="motherRadio4">Widowed</td>
+					<input asp-for="MotherStatus" value="Married" type="radio" id="motherRadio1">Married
+					<input asp-for="MotherStatus" value="Single" type="radio" id="motherRadio2">Single
+					<input asp-for="MotherStatus" value="Separated" type="radio" id="motherRadio3">Separated
+					<input asp-for="MotherStatus" value="Widowed" type="radio" id="motherRadio4">Widowed
 				</div>
 			</td>
 		</tr>  
