--- a/UnivMedicalRecord/Pages/GeneralRecord/EditRecord.cshtml
+++ b/UnivMedicalRecord/Pages/GeneralRecord/EditRecord.cshtml
@@ -13,8 +13,7 @@
 
 
 <style>
- 
-        body {
+       body {
                    background-color: #8080;
                    font-family: sans-serif;
                    //text-align: center;
@@ -34,18 +33,8 @@
            	text-align: center;
            	}
            
-           	input[id="radio1"]{
-           	display: inline-block;
-         		margin-left: -180px;
-           	}
-           
-              	input[id="radio2"]{
-           	display: inline-block;
-         		margin-left: -100px;
-           	}
-           
            	input[id="name"]{
-           	width: 225px;
+           	width: 330px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -54,7 +43,7 @@
            	}
            
              	input[id="age"]{
-           	width: 40px;
+           	width: 70px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -63,7 +52,7 @@
            	}
            
                input[id="email"]{
-           	width: 229px;
+           	width: 340px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -72,7 +61,7 @@
            	}
            
                input[id="id"]{
-           	width: 150px;
+           	width: 350px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -81,7 +70,7 @@
            	}
            
                input[id="mobile"]{
-           	width: 150px;
+           	width: 200px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -90,7 +79,7 @@
            	}
            
                input[id="doctor"]{
-           	width: 220px;
+           	width: 325px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -99,7 +88,7 @@
            	}
            
                input[id="insurance"]{
-           	width: 175px;
+           	width: 300px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -108,7 +97,7 @@
            	}
            
                input[id="dob"]{
-           	width: 125px;
+           	width: 175px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -117,7 +106,7 @@
            	}
            
                input[id="birthplace"]{
-           	width: 165px;
+           	width: 275px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -126,7 +115,7 @@
            	}
            
                input[id="address"]{
-           	width: 190px;
+           	width: 325px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -134,26 +123,11 @@
            	margin-left: 5px;
            	}
            
-              	input[id="motherRadio1"]{
-           	display: inline-block;
-         		margin-left: -200px;
-           	}
-           
-              	input[id="motherRadio2"]{
-           	display: inline-block;
-         		margin-left: -500px;
-           	}
-           
-               input[id="motherRadio3"]{
-           	display: inline-block;
-         		margin-left: -400px;
-           	}
-           
-              	input[id="motherRadio4"]{
-           	display: inline-block;
-         		margin-left: -275px;
-           	}
-           
+           input[type="radio"]{
+           margin-left: 10px;
+           margin-right: 5px;
+           }
+
            	input[id="motherName"]{
            	width: 225px;
            	padding: 10px 10px 10px 10px;
@@ -164,7 +138,7 @@
            	}
            
               	input[id="motherAddress"]{
-           	width: 190px;
+           	width: 360px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -182,7 +156,7 @@
            	}
            
            	input[id="motherNumber"]{
-           	width: 150px;
+           	width: 210px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -190,26 +164,6 @@
            	margin-left: 5px;
            	}
            
-           
-               input[id="fatherRadio1"]{
-           	display: inline-block;
-         		margin-left: -200px;
-           	}
-           
-              	input[id="fatherRadio2"]{
-           	display: inline-block;
-         		margin-left: -500px;
-           	}
-           
-               input[id="fatherRadio3"]{
-           	display: inline-block;
-         		margin-left: -400px;
-           	}
-           
-              	input[id="fatherRadio4"]{
-           	display: inline-block;
-         		margin-left: -275px;
-           	}
            
            	input[id="fatherName"]{
            	width: 225px;
@@ -221,7 +175,7 @@
            	}
            
               	input[id="fatherAddress"]{
-           	width: 190px;
+           	width: 360px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -239,7 +193,7 @@
            	}
            
            	input[id="fatherNumber"]{
-           	width: 150px;
+           	width: 210px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -248,25 +202,6 @@
            	}
            
            
-               input[id="guardianRadio1"]{
-           	display: inline-block;
-         		margin-left: -200px;
-           	}
-           
-              	input[id="guardianRadio2"]{
-           	display: inline-block;
-         		margin-left: -500px;
-           	}
-           
-               input[id="guardianRadio3"]{
-           	display: inline-block;
-         		margin-left: -400px;
-           	}
-           
-              	input[id="guardianRadio4"]{
-           	display: inline-block;
-         		margin-left: -275px;
-           	}
            
            	input[id="guardianName"]{
            	width: 225px;
@@ -278,7 +213,7 @@
            	}
            
               	input[id="guardianAddress"]{
-           	width: 190px;
+           	width: 360px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -296,7 +231,7 @@
            	}
            
            	input[id="guardianRelation"]{
-           	width: 150px;
+           	width: 210px;
            	padding: 10px 10px 10px 10px;
                border: none;
        		border-bottom: 2px solid black;
@@ -321,8 +256,6 @@
            	margin-right: 30px;
            	margin-left: 5px;
            	}
-           	
-           
         
 </style>
 
@@ -367,17 +300,17 @@
 			<table>
 				<tbody>
 				<tr>
-					<td> <label for="name">Name</label>
+					<td> <label for="name">Name*</label>
 						<input asp-for="Personal.Name" type="text" id="name">
 					</td>
-					<td> <label for="age">Age</label>
+					<td> <label for="age">Age*</label>
 						<input asp-for="Personal.Age" type=number id="age">
 					</td>
 					<td>
 						<div class="mt-3" style="float:left">
-							<label>Gender</label>
-							<td><input asp-for="Personal.Sex" type="radio" value="Male" id="radio1">Male</td>
-							<td><input asp-for="Personal.Sex" type="radio" value="Female" id="radio2">Female</td>
+							<label>Gender*</label>
+							<input asp-for="Personal.Sex" type="radio" value="Male" id="radio1">Male
+							<input asp-for="Personal.Sex" type="radio" value="Female" id="radio2">Female
 						</div>
 					</td>
 				</tr>
@@ -385,7 +318,7 @@
 					<td> <label for="email">Email</label>
 						<input asp-for="Personal.Email" type=text id="email">
 					</td>
-					<td> <label for="id">ID</label>
+					<td> <label for="id">ID*</label>
 						<input asp-for="Personal.IdNumber" type=text id="id">
 					</td>
 					<td> <label for="mobile">Mobile</label>
@@ -399,7 +332,7 @@
 					<td> <label for="insurance">Insurance</label>
 						<input asp-for="Personal.Insurance" type="text" id="insurance">
 					</td>
-					<td> <label for="dob">Date of Birth</label>
+					<td> <label for="dob">Date of Birth*</label>
 						<input asp-for="Personal.DateOfBirth" type=date id="dob">
 					</td>
 
@@ -409,7 +342,7 @@
 					<td> <label for="birthplace">Place of Birth</label>
 						<input asp-for="Personal.PlaceOfBirth" type="text" id="birthplace">
 					</td>
-					<td> <label for="address">Address</label>
+					<td> <label for="address">Address*</label>
 						<input asp-for="Personal.Address" class="mb-5" type="text" id="address">
 					</td>
 				</tr>
@@ -446,10 +379,10 @@
 			<td>
 				<div class="mt-3">
 					<label>Mother's Civil Status:</label>
-					<td><input asp-for="FamilyInfo.MotherStatus" value="Married" type="radio" id="motherRadio1">Married</td>
-					<td><input asp-for="FamilyInfo.MotherStatus" value="Single" type="radio" id="motherRadio2">Single</td>
-					<td><input asp-for="FamilyInfo.MotherStatus" value="Separated" type="radio" id="motherRadio3">Separated</td>
-					<td><input asp-for="FamilyInfo.MotherStatus" value="Widowed" type="radio" id="motherRadio4">Widowed</td>
+					<input asp-for="FamilyInfo.MotherStatus" value="Married" type="radio" id="motherRadio1">Married
+					<input asp-for="FamilyInfo.MotherStatus" value="Single" type="radio" id="motherRadio2">Single
+					<input asp-for="FamilyInfo.MotherStatus" value="Separated" type="radio" id="motherRadio3">Separated
+					<input asp-for="FamilyInfo.MotherStatus" value="Widowed" type="radio" id="motherRadio4">Widowed
 				</div>
 			</td>
 		</tr>
