--- a/UnivMedicalRecord/Pages/Login/Index.cshtml
+++ b/UnivMedicalRecord/Pages/Login/Index.cshtml
@@ -17,6 +17,7 @@
         <div class=" card col-md-5 m-lg-5">
             <h2 class="card-header">Login</h2>
             <div class="card-body">
+                 <span class="text-danger mt-1">@Model.WrongUserPassword</span>
                 <form method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group mt-2">
