--- a/UnivMedicalRecord/Pages/LaboratoryRecord/EditFecalysis.cshtml
+++ b/UnivMedicalRecord/Pages/LaboratoryRecord/EditFecalysis.cshtml
@@ -109,7 +109,7 @@
                                         </thead>
                                         <tbody>
                                         <tr>
-                                            <td>Pus cells/HPF</td>
+                                            <td>Pus cells/HPF*</td>
                                             <td><input asp-for="Fecalysis.StoolPusCells" type="number" min="0" class="form-control"/></td>
                                         </tr>
 
