--- a/UnivMedicalRecord/Pages/LaboratoryRecord/AddLab.cshtml
+++ b/UnivMedicalRecord/Pages/LaboratoryRecord/AddLab.cshtml
@@ -94,10 +94,34 @@
                                     </tr>
                                     </thead>
                                     <tbody>
+                                    
                                     <tr>
-                                        <td>WBC Count</td>
+                                        <td>RBC Count*</td>
+                                        <td><input asp-for="Rbc" type="number" step=".01" min="0" class="form-control"></td>
+                                        <td>M: 4.5 - 6.2 x 10/L
+                                            F: 4.2 - 5.4 x 10/L</td>
+                                    </tr>
+                                    
+                                    <tr>
+                                        <td>WBC Count*</td>
                                         <td><input asp-for="Wbc" type="number" step=".1" min="0" class="form-control"/>
                                         <td>5.0 - 10.0 x 10/L</td>
+                                    </tr>
+
+                                    <tr>
+                                        <td>Platelets*</td>
+                                        <td><input asp-for="Plt" type="number" min="0" class="form-control"></td>
+                                        <td>A: 150 - 450 x 10/L
+                                            NB: 84 - 450 x 10/L</td>
+                                    </tr>
+
+                                    <tr>
+                                        <td>Hemoglobin*</td>
+                                        <td><input asp-for="Hb" type="number" step=".1" min="0" class="form-control"></td>
+                                        <td>M: 140.0 - 180.0G/L
+                                            F: 120.0 - 160.0G/L
+                                            C: 100.0 - 140.0G/L
+                                            NB: 140.0 - 230.0G/L</td>
                                     </tr>
 
                                     <tr>
@@ -161,22 +185,6 @@
                                     </tr>
 
                                     <tr>
-                                        <td>RBC Count</td>
-                                        <td><input asp-for="Rbc" type="number" step=".01" min="0" class="form-control"></td>
-                                        <td>M: 4.5 - 6.2 x 10/L
-                                            F: 4.2 - 5.4 x 10/L</td>
-                                    </tr>
-
-                                    <tr>
-                                        <td>Hemoglobin</td>
-                                        <td><input asp-for="Hb" type="number" step=".1" min="0" class="form-control"></td>
-                                        <td>M: 140.0 - 180.0G/L
-                                            F: 120.0 - 160.0G/L
-                                            C: 100.0 - 140.0G/L
-                                            NB: 140.0 - 230.0G/L</td>
-                                    </tr>
-
-                                    <tr>
                                         <td>Hematocrit</td>
                                         <td><input asp-for="Hct" type="number" step=".01" min="0" class="form-control"></td>
                                         <td>M: 0.40 - 0.54
@@ -188,13 +196,6 @@
                                         <td><input asp-for="Esr" type="number" min="0" class="form-control"></td>
                                         <td>M: 1-10mm/hr
                                             F: 0-20mm/hr</td>
-                                    </tr>
-
-                                    <tr>
-                                        <td>Platelets</td>
-                                        <td><input asp-for="Plt" type="number" min="0" class="form-control"></td>
-                                        <td>A: 150 - 450 x 10/L
-                                            NB: 84 - 450 x 10/L</td>
                                     </tr>
 
                                     <tr>
@@ -331,7 +332,7 @@
                                         </thead>
                                         <tbody>
                                         <tr>
-                                            <td>Pus cells/HPF</td>
+                                            <td>Pus cells/HPF*</td>
                                             <td><input asp-for="StoolPus" type="number" min="0" class="form-control"/></td>
                                         </tr>
 
@@ -403,13 +404,45 @@
                                  </thead>
                                  <tbody>
                                  <tr>
+                                     <td>Cholesterol*</td>
+                                     <td><input asp-for="TradCholesterol" type="number" step=".1" min="0" class="form-control"></td>
+                                     <td><input asp-for="SiCholesterol" type="number" step=".1" min="0" class="form-control"></td>
+                                     <td> &lt;200 mg/dl
+                                         &lt; 5.2 mmol/L</td>
+                                 </tr>
+                                 
+                                 <tr>
+                                     <td>LDL*</td>
+                                     <td><input asp-for="TradLdl" type="number" step=".1" min="0" class="form-control"></td>
+                                     <td><input asp-for="SiLdl" type="number" step=".1" min="0" class="form-control"></td>
+                                     <td>110 - 130 mg/dl
+                                         2.8 - 3.4 mmol/L</td>
+                                 </tr>   
+                                 
+                                 <tr>
+                                     <td>dHDL*</td>
+                                     <td><input asp-for="TradDhdl" type="number" step=".1" min="0" class="form-control"></td>
+                                     <td><input asp-for="SiDhdl" type="number" step=".1" min="0" class="form-control"></td>
+                                     <td>&gt; 40 mg/dl
+                                         &gt; 1.0 mmol/L</td>
+                                 </tr>                                   
+                                 
+                                 <tr>
+                                     <td>Triglyceride*</td>
+                                     <td><input asp-for="TradTriglyceride" type="number" step=".1" min="0" class="form-control"></td>
+                                     <td><input asp-for="SiTriglyceride" type="number" step=".1" min="0" class="form-control"></td>
+                                     <td>&lt; 150 mg/dl
+                                         &lt; 1.7 mmol/L</td>
+                                 </tr>
+
+                                 <tr>
                                      <td>FBS</td>
                                      <td><input asp-for="TradFbs" type="number" step=".1" min="0" class="form-control"></td>
                                      <td><input asp-for="SiFbs" type="number" step=".1" min="0" class="form-control"></td>
                                      <td>74 - 106 mg/dl
                                          4.1 - 5.9 mmol/L</td>
-                                 </tr>                
-                                                          
+                                 </tr>
+
                                  <tr>
                                      <td>BUN</td>
                                      <td><input asp-for="TradBun" type="number" step=".1" min="0" class="form-control"></td>
@@ -418,8 +451,8 @@
                                          F: 3.2 - 7.1 mg/dl</td>
                                      <td>M: 7 - 17 mmol/L
                                          F: 2.5 - 6.1 mmol/L</td>
-                                 </tr>                   
-                                                                          
+                                 </tr>
+
                                  <tr>
                                      <td>Creatinine</td>
                                      <td><input asp-for="TradCreatinine" type="number" step=".1" min="0" class="form-control"></td>
@@ -428,8 +461,8 @@
                                          F: 0.7 - 1.2 mg/dl</td>
                                      <td>M: 71 - 133 ummol/L
                                          F: 62 - 106 ummol/L</td>
-                                 </tr>                 
-                                                                          
+                                 </tr>
+
                                  <tr>
                                      <td>BUA</td>
                                      <td><input asp-for="TradBua" type="number" step=".1" min="0" class="form-control"></td>
@@ -438,39 +471,8 @@
                                          F: 2.5 - 6.2 mg/dl</td>
                                      <td>M: 208 - 506 ummol/L
                                          F: 149 - 369 ummol/L</td>
-                                 </tr>                  
-                                 <tr>
-                                     <td>Cholesterol</td>
-                                     <td><input asp-for="TradCholesterol" type="number" step=".1" min="0" class="form-control"></td>
-                                     <td><input asp-for="SiCholesterol" type="number" step=".1" min="0" class="form-control"></td>
-                                     <td> &lt;200 mg/dl
-                                         &lt; 5.2 mmol/L</td>
-                                 </tr>                 
-                                                                          
-                                 <tr>
-                                     <td>Triglyceride</td>
-                                     <td><input asp-for="TradTriglyceride" type="number" step=".1" min="0" class="form-control"></td>
-                                     <td><input asp-for="SiTriglyceride" type="number" step=".1" min="0" class="form-control"></td>
-                                     <td>&lt; 150 mg/dl
-                                         &lt; 1.7 mmol/L</td>
-                                 </tr>                  
-                                                                          
-                                 <tr>
-                                     <td>dHDL</td>
-                                     <td><input asp-for="TradDhdl" type="number" step=".1" min="0" class="form-control"></td>
-                                     <td><input asp-for="SiDhdl" type="number" step=".1" min="0" class="form-control"></td>
-                                     <td>&gt; 40 mg/dl
-                                         &gt; 1.0 mmol/L</td>
-                                 </tr>                  
-                                                                          
-                                 <tr>
-                                     <td>LDL</td>
-                                     <td><input asp-for="TradLdl" type="number" step=".1" min="0" class="form-control"></td>
-                                     <td><input asp-for="SiLdl" type="number" step=".1" min="0" class="form-control"></td>
-                                     <td>110 - 130 mg/dl
-                                         2.8 - 3.4 mmol/L</td>
-                                 </tr>                   
-                                                                          
+                                 </tr>
+
                                  <tr>
                                      <td>SGOT</td>
                                      <td></td>
@@ -478,8 +480,8 @@
                                      <td></td>
                                      <td>M: 17 - 59 u/L
                                          F: 14 - 36 u/L</td>
-                                 </tr>                 
-                                                                          
+                                 </tr>
+
                                  <tr>
                                      <td>SGPT</td>
                                      <td></td>
@@ -487,8 +489,8 @@
                                      <td></td>
                                      <td>M: 21 - 72 u/L
                                          F: 9 - 52 u/L</td>
-                                 </tr>                
-                                                                          
+                                 </tr>
+
                                  <tr>
                                      <td>Amylase</td>
                                      <td></td>
@@ -496,57 +498,57 @@
                                      <td></td>
                                      <td>330 - 110 mmol/L</td>
                                  </tr>
-                                                                          
+
                                  <tr>
                                      <td>CKMB</td>
                                      <td></td>
                                      <td><input asp-for="Ckmb" type="number" step=".1" min="0" class="form-control"></td>
                                      <td></td>
                                      <td>up to 16 u/L</td>
-                                 </tr>                
-                                                                          
+                                 </tr>
+
                                  <tr>
                                      <td>Sodium</td>
                                      <td></td>
                                      <td><input asp-for="Sodium" type="number" step=".1" min="0" class="form-control"></td>
                                      <td></td>
                                      <td>135 - 148 mmol/L</td>
-                                 </tr>                
-                                                                          
+                                 </tr>
+
                                  <tr>
                                      <td>Potassium</td>
                                      <td></td>
                                      <td><input asp-for="Potassium" type="number" step=".1" min="0" class="form-control"></td>
                                      <td></td>
                                      <td>3.5 - 5.3 mmol/L</td>
-                                 </tr>    
-                                                                          
+                                 </tr>
+
                                  <tr>
                                      <td>Chloride</td>
                                      <td></td>
                                      <td><input asp-for="Chloride" type="number" step=".1" min="0" class="form-control"></td>
                                      <td></td>
                                      <td>98 - 107 mmol/L</td>
-                                 </tr>                 
-                                                                          
+                                 </tr>
+
                                  <tr>
                                      <td>Ionized Calcium</td>
                                      <td></td>
                                      <td><input asp-for="IonizedCalcium" type="number" step=".1" min="0" class="form-control"></td>
                                      <td></td>
                                      <td>1.13 - 1.31 mmol/L</td>
-                                 </tr>                 
-                                                                          
+                                 </tr>
+
                                  <tr>
                                      <td>Remarks</td>
                                      <td colspan="4"><input asp-for="Remarks" type="text" class="form-control"></td>
-                                 </tr>                     
-                                                                          
+                                 </tr>
+
                                  <tr>
                                      <td>Other Remarks</td>
                                      <td colspan="4"><input asp-for="OtherRemarks" type="text" class="form-control"></td>
-                                 </tr>                
-                                                                          
+                                 </tr>
+
                                  </tbody>
                              </table>
                              </form>
