--- a/UnivMedicalRecord/Pages/LaboratoryRecord/EditCholesterol.cshtml
+++ b/UnivMedicalRecord/Pages/LaboratoryRecord/EditCholesterol.cshtml
@@ -90,14 +90,47 @@
                                         </tr>
                                         </thead>
                                         <tbody>
+                                        
+                                        <tr>
+                                            <td>Cholesterol*</td>
+                                            <td><input asp-for="Cholesterol.TradCholesterol" type="number" step=".1" min="0" class="form-control"></td>
+                                            <td><input asp-for="CholesterolSi.SiCholesterol" type="number" step=".1" min="0" class="form-control"></td>
+                                            <td> &lt;200 mg/dl
+                                                &lt; 5.2 mmol/L</td>
+                                        </tr> 
+                                        
+                                        <tr>
+                                            <td>LDL*</td>
+                                            <td><input asp-for="Cholesterol.TradLdl" type="number" step=".1" min="0" class="form-control"></td>
+                                            <td><input asp-for="CholesterolSi.SiLdl" type="number" step=".1" min="0" class="form-control"></td>
+                                            <td>110 - 130 mg/dl
+                                                2.8 - 3.4 mmol/L</td>
+                                        </tr>                                         
+                                         
+                                        <tr>
+                                            <td>dHDL*</td>
+                                            <td><input asp-for="Cholesterol.TradDhdl" type="number" step=".1" min="0" class="form-control"></td>
+                                            <td><input asp-for="CholesterolSi.SiDhdl" type="number" step=".1" min="0" class="form-control"></td>
+                                            <td>&gt; 40 mg/dl
+                                                &gt; 1.0 mmol/L</td>
+                                        </tr>                                          
+                                        
+                                        <tr>
+                                            <td>Triglyceride*</td>
+                                            <td><input asp-for="Cholesterol.TradTriglyceride" type="number" step=".1" min="0" class="form-control"></td>
+                                            <td><input asp-for="CholesterolSi.SiTriglyceride" type="number" step=".1" min="0" class="form-control"></td>
+                                            <td>&lt; 150 mg/dl
+                                                &lt; 1.7 mmol/L</td>
+                                        </tr>                  
+                                        
                                         <tr>
                                             <td>FBS</td>
                                             <td><input asp-for="Cholesterol.TradFbs" type="number" step=".1" min="0" class="form-control"></td>
                                             <td><input asp-for="CholesterolSi.SiFbs" type="number" step=".1" min="0" class="form-control"></td>
                                             <td>74 - 106 mg/dl
                                                 4.1 - 5.9 mmol/L</td>
-                                        </tr>                
-                                                          
+                                        </tr>
+
                                         <tr>
                                             <td>BUN</td>
                                             <td><input asp-for="Cholesterol.TradBun" type="number" step=".1" min="0" class="form-control"></td>
@@ -106,8 +139,8 @@
                                                 F: 3.2 - 7.1 mg/dl</td>
                                             <td>M: 7 - 17 mmol/L
                                                 F: 2.5 - 6.1 mmol/L</td>
-                                        </tr>                   
-                                                                          
+                                        </tr>
+
                                         <tr>
                                             <td>Creatinine</td>
                                             <td><input asp-for="Cholesterol.TradCreatinine" type="number" step=".1" min="0" class="form-control"></td>
@@ -116,8 +149,8 @@
                                                 F: 0.7 - 1.2 mg/dl</td>
                                             <td>M: 71 - 133 ummol/L
                                                 F: 62 - 106 ummol/L</td>
-                                        </tr>                 
-                                                                          
+                                        </tr>
+
                                         <tr>
                                             <td>BUA</td>
                                             <td><input asp-for="Cholesterol.TradBua" type="number" step=".1" min="0" class="form-control"></td>
@@ -126,39 +159,8 @@
                                                 F: 2.5 - 6.2 mg/dl</td>
                                             <td>M: 208 - 506 ummol/L
                                                 F: 149 - 369 ummol/L</td>
-                                        </tr>                  
-                                        <tr>
-                                            <td>Cholesterol</td>
-                                            <td><input asp-for="Cholesterol.TradCholesterol" type="number" step=".1" min="0" class="form-control"></td>
-                                            <td><input asp-for="CholesterolSi.SiCholesterol" type="number" step=".1" min="0" class="form-control"></td>
-                                            <td> &lt;200 mg/dl
-                                                &lt; 5.2 mmol/L</td>
-                                        </tr>                 
-                                                                          
-                                        <tr>
-                                            <td>Triglyceride</td>
-                                            <td><input asp-for="Cholesterol.TradTriglyceride" type="number" step=".1" min="0" class="form-control"></td>
-                                            <td><input asp-for="CholesterolSi.SiTriglyceride" type="number" step=".1" min="0" class="form-control"></td>
-                                            <td>&lt; 150 mg/dl
-                                                &lt; 1.7 mmol/L</td>
-                                        </tr>                  
-                                                                          
-                                        <tr>
-                                            <td>dHDL</td>
-                                            <td><input asp-for="Cholesterol.TradDhdl" type="number" step=".1" min="0" class="form-control"></td>
-                                            <td><input asp-for="CholesterolSi.SiDhdl" type="number" step=".1" min="0" class="form-control"></td>
-                                            <td>&gt; 40 mg/dl
-                                                &gt; 1.0 mmol/L</td>
-                                        </tr>                  
-                                                                          
-                                        <tr>
-                                            <td>LDL</td>
-                                            <td><input asp-for="Cholesterol.TradLdl" type="number" step=".1" min="0" class="form-control"></td>
-                                            <td><input asp-for="CholesterolSi.SiLdl" type="number" step=".1" min="0" class="form-control"></td>
-                                            <td>110 - 130 mg/dl
-                                                2.8 - 3.4 mmol/L</td>
-                                        </tr>                   
-                                                                          
+                                        </tr>
+
                                         <tr>
                                             <td>SGOT</td>
                                             <td></td>
@@ -166,8 +168,8 @@
                                             <td></td>
                                             <td>M: 17 - 59 u/L
                                                 F: 14 - 36 u/L</td>
-                                        </tr>                 
-                                                                          
+                                        </tr>
+
                                         <tr>
                                             <td>SGPT</td>
                                             <td></td>
@@ -175,8 +177,8 @@
                                             <td></td>
                                             <td>M: 21 - 72 u/L
                                                 F: 9 - 52 u/L</td>
-                                        </tr>                
-                                                                          
+                                        </tr>
+
                                         <tr>
                                             <td>Amylase</td>
                                             <td></td>
@@ -184,52 +186,52 @@
                                             <td></td>
                                             <td>330 - 110 mmol/L</td>
                                         </tr>
-                                                                          
+
                                         <tr>
                                             <td>CKMB</td>
                                             <td></td>
                                             <td><input asp-for="CholesterolSi.Ckmb" type="number" step=".1" min="0" class="form-control"></td>
                                             <td></td>
                                             <td>up to 16 u/L</td>
-                                        </tr>                
-                                                                          
+                                        </tr>
+
                                         <tr>
                                             <td>Sodium</td>
                                             <td></td>
                                             <td><input asp-for="CholesterolSi.Sodium" type="number" step=".1" min="0" class="form-control"></td>
                                             <td></td>
                                             <td>135 - 148 mmol/L</td>
-                                        </tr>                
-                                                                          
+                                        </tr>
+
                                         <tr>
                                             <td>Potassium</td>
                                             <td></td>
                                             <td><input asp-for="CholesterolSi.Potassium" type="number" step=".1" min="0" class="form-control"></td>
                                             <td></td>
                                             <td>3.5 - 5.3 mmol/L</td>
-                                        </tr>    
-                                                                          
+                                        </tr>
+
                                         <tr>
                                             <td>Chloride</td>
                                             <td></td>
                                             <td><input asp-for="CholesterolSi.Chloride" type="number" step=".1" min="0" class="form-control"></td>
                                             <td></td>
                                             <td>98 - 107 mmol/L</td>
-                                        </tr>                 
-                                                                          
+                                        </tr>
+
                                         <tr>
                                             <td>Ionized Calcium</td>
                                             <td></td>
                                             <td><input asp-for="CholesterolSi.IonizedCalcium" type="number" step=".1" min="0" class="form-control"></td>
                                             <td></td>
                                             <td>1.13 - 1.31 mmol/L</td>
-                                        </tr>                 
-                                                                          
+                                        </tr>
+
                                         <tr>
                                             <td>Remarks</td>
                                             <td colspan="4"><input asp-for="Cholesterol.Remarks" type="text" class="form-control"></td>
-                                        </tr>                     
-                                                                          
+                                        </tr>
+
                                         <tr>
                                             <td>Other Remarks</td>
                                             <td colspan="4"><input asp-for="Cholesterol.OtherRemarks" type="text" class="form-control"></td>
