Initial commit on master2

--- a/UnivMedicalRecord/Pages/Homepage/Records.cshtml
+++ b/UnivMedicalRecord/Pages/Homepage/Records.cshtml
@@ -44,7 +44,7 @@
 								<div class="card">
 									<h2>@x.labResult.User.Firstname @x.labResult.User.Lastname's Record</h2>
 									<p>Date:@x.DateRetrieved</p>
-									<a class="btn-close-white" asp-page="../LaboratoryRecord/EditUrinalysis" asp-route-id="@x.Id">Edit</a>
+									<a class="btn-close-dark" asp-page="../LaboratoryRecord/EditUrinalysis" asp-route-id="@x.Id">Edit</a>
 								</div>
 							}
 						</div>
