--- a/UnivMedicalRecord/Pages/Homepage/Index.cshtml
+++ b/UnivMedicalRecord/Pages/Homepage/Index.cshtml
@@ -268,16 +268,17 @@
                                             datasets: [{
                                                 label: 'Chart Values',
                                                 data: @Html.Raw(Json.Serialize(Model.ChartValues)),
-                                                backgroundColor: 'rgba(0, 0, 0, 1)',
-                                                borderColor: 'rgba(0, 0, 0, 1)',
-                                                borderWidth: 1
+                                                backgroundColor: 'rgba(0, 123, 255, 0.2)',
+                                                borderColor: 'rgba(0, 123, 255, 1)',  
+                                                borderWidth: 1,
+                                                fill: false
                                             }]
                                         };
                                 
                                         window.onload = function () {
                                             var ctx = document.getElementById('myChart').getContext('2d');
                                             var chart = new Chart(ctx, {
-                                                type: 'bar',
+                                                type: 'line',
                                                 data: chartData,
                                                 options: {
                                                     responsive: true,
@@ -298,7 +299,10 @@
               <h1 style="font-size: 15px;color: #ffffff;font-family: Roboto, sans-serif;line-height: 1.2;">Laboratory Result Summary: </h1>
             </div>
             <div>
-              <input type="date" asp-for="DateSummary"/>
+              <label for="start-date">Start Date</label>
+              <input type="date" id="start-date" asp-for="DateStart" value="@DateTime.Now.ToString("yyyy-MM-dd")"/>
+              <label for="end-date">End Date</label>
+              <input type="date" id="end-date" asp-for="DateEnd" value="@DateTime.Now.ToString("yyyy-MM-dd")"/>
               <select asp-for="ChosenSummary">
                 <option value="CBC">CBC</option>
                 <option value="Fecalysis">Fecalysis</option>
