--- a/UnivMedicalRecord/Pages/LaboratoryRecord/AddLab.cshtml
+++ b/UnivMedicalRecord/Pages/LaboratoryRecord/AddLab.cshtml
@@ -81,7 +81,7 @@
                                     </div>
                                 </div>
                                
-                                Input the Date of the Lab Test: <input asp-for="LabDateCBC" type="date" id="LabDate">
+                                Input the Date of the Lab Test: <input asp-for="LabDateCBC" type="date" id="LabDate" value="@DateTime.Now.ToString("yyyy-MM-dd")">
                                  <button type="button" class="btn btn-dark m-lg-1" style="float: right" data-toggle="modal" data-target=".Cbc">Show Laboratory Test</button>
                                 <button class="btn btn-dark m-lg-1" style="float: right" asp-page-handler="Cbc" type="submit">Submit</button>
                                 <input type="hidden" asp-for="Id" value="@Model.CurrentId"/>
@@ -291,7 +291,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    Input the Date of the Lab Test: <input asp-for="LabDateFecalysis" type="date">
+                                    Input the Date of the Lab Test: <input asp-for="LabDateFecalysis" type="date" value="@DateTime.Now.ToString("yyyy-MM-dd")">
                                     <button type="button" class="btn btn-dark m-lg-1" style="float: right" data-toggle="modal" data-target=".fecalysis">Show Laboratory Test</button>
                                     <button class="btn btn-dark m-lg-1" style="float: right" asp-page-handler="Fecalysis" type="submit">Submit</button>
                                     <input type="hidden" asp-for="Id" value="@Model.CurrentId"/>
@@ -383,7 +383,7 @@
                                          </div>
                                      </div>
                                  </div>
-                                 Input the Date of the Lab Test: <input asp-for="LabDateCholesterol" type="date" id="LabDate">
+                                 Input the Date of the Lab Test: <input asp-for="LabDateCholesterol" type="date" id="LabDate" value="@DateTime.Now.ToString("yyyy-MM-dd")">
                                  <button type="button" class="btn btn-dark m-lg-1" style="float: right" data-toggle="modal" data-target=".Cholesterol">Show Laboratory Test</button>
                                  <button class="btn btn-dark mb-4" style="float: right" asp-page-handler="Cholesterol" type="submit">Submit</button>
                                  <input type="hidden" asp-for="Id" value="@Model.CurrentId"/>
@@ -575,7 +575,7 @@
                                               </div>
                                           </div>
                                       </div>
-                                      Input the Date of the Lab Test: <input asp-for="LabDateUrinalysis" type="date" id="LabDate">
+                                      Input the Date of the Lab Test: <input asp-for="LabDateUrinalysis" type="date" id="LabDate" value="@DateTime.Now.ToString("yyyy-MM-dd")">
                                       <button type="button" class="btn btn-dark m-lg-1" style="float: right" data-toggle="modal" data-target=".Urinalysis">Show Laboratory Test</button>
                                       <button class="btn btn-dark m-lg-1" style="float: right" asp-page-handler="Urinalysis" type="Submit">Submit</button>
                                       <input type="hidden" asp-for="Id" value="@Model.CurrentId"/>
